# purgatory

./: .clang-format  .gitignore  .tmux-cheatsheet.txt  .tmux.conf.local  CMakeLists.txt  LICENSE  README.md  cppcheck.sh  format.sh  install-build-deps.sh  tmux-session.sh
.github/: CI_CD.md  CPPCHECK_CI_SUMMARY.md  FUNDING.yml  markdown-link-check-config.json
.github/workflows/: ci.yml  coverage.yml  pr-checks.yml  release.yml
docs/: ALGORITHMS.md  QUICK_REFERENCE.md  README.md
docs/algorithms/: advanced.md  array.md  hashmap.md  slidingwindow.md  stack.md  tree-graph.md  twopointers.md
src/: StrBlob.h  array.cc  backtracking.cc  binarysearch.cc  binarytree.cc  dp.cc  entry.cc  graph.cc  graphbfs.cc  hashmap.cc  heap.cc  intervals.cc  linkedlist.cc  main.cc  matrix.cc  prefixsum.cc  purgatory.h  query.cc  query.h  slidingwindow.cc  stack.cc  test.txt  twopointers.cc
test/: CMakeLists.txt  test.cc
